# projectforge-cpp

./: CMakeLists.txt  README.md
plugins/: CMakeLists.txt
plugins/banking/: CMakeLists.txt
plugins/banking/src/: Plugin.cpp
plugins/complete/include/: ExtendedPluginsComplete.hpp
plugins/complete/src/: PluginsComplete.cpp
plugins/datatransfer/: CMakeLists.txt
plugins/datatransfer/src/: Plugin.cpp
plugins/ihk/: CMakeLists.txt
plugins/ihk/src/: Plugin.cpp
plugins/licensemanagement/: CMakeLists.txt
plugins/licensemanagement/src/: Plugin.cpp
plugins/liquidityplanning/: CMakeLists.txt
plugins/liquidityplanning/src/: Plugin.cpp
plugins/marketing/: CMakeLists.txt
plugins/marketing/src/: Plugin.cpp
plugins/memo/: CMakeLists.txt
plugins/memo/src/: Plugin.cpp
plugins/merlin/: CMakeLists.txt
plugins/merlin/src/: Plugin.cpp
plugins/skillmatrix/: CMakeLists.txt
plugins/skillmatrix/src/: Plugin.cpp
plugins/todo/: CMakeLists.txt
plugins/todo/src/: Plugin.cpp
projectforge-application/: CMakeLists.txt
projectforge-application/include/org/projectforge/start/: DatabaseInitializer.hpp  PluginLoader.hpp  ProjectForgeConfig.hpp  ProjectForgeServer.hpp
projectforge-application/include/org/projectforge/verification/: VerificationHarness.hpp
projectforge-application/src/: DatabaseInitializer.cpp  Main.cpp  PluginLoader.cpp  ProjectForgeConfig.cpp  ProjectForgeServer.cpp  VerificationHarness.cpp  main.cpp
projectforge-application/src/org/projectforge/start/: DatabaseInitializer.cpp  PluginLoader.cpp  ProjectForgeConfig.cpp  ProjectForgeServer.cpp
projectforge-business/: CMakeLists.txt
projectforge-business/include/org/projectforge/business/: AccessChecker.hpp  AddressDao.hpp  AdminService.hpp  AuftragDao.hpp  BaseDao.hpp  BookDao.hpp  CalendarDao.hpp  ConfigurationDao.hpp  DatevDao.hpp  EmailService.hpp  GanttDao.hpp  GroupDao.hpp  HrDao.hpp  JobService.hpp  KontoDao.hpp  KostDao.hpp  LdapService.hpp  LoginService.hpp  PollService.hpp  RechnungDao.hpp  ScriptingService.hpp  TaskDao.hpp  TeamCalendarDao.hpp  TimesheetDao.hpp  UserDao.hpp  VacationDao.hpp
projectforge-business/include/org/projectforge/mail/: MailService.hpp
projectforge-business/include/org/projectforge/menu/: MenuSystem.hpp
projectforge-business/include/org/projectforge/messaging/: MessagingModule.hpp
projectforge-business/src/: BaseDao.cpp  BusinessServicesExpanded.cpp  BusinessSvcs.cpp
projectforge-business/src/dao/: ExtendedDaoComplete.cpp
projectforge-business/src/fibu/: FibuAccountingComplete.cpp
projectforge-business/src/framework/: FrameworkExtended.cpp
projectforge-business/src/services/: ExtendedServicesComplete.cpp
projectforge-carddav/: CMakeLists.txt
projectforge-carddav/src/: CardDavModule.cpp
projectforge-common/: CMakeLists.txt
projectforge-common/include/projectforge-common/: AnnotationsUtils.hpp  BackupFilesPurging.hpp  CSVParser.hpp  CSVWriter.hpp  CanonicalFileUtils.hpp  ClassUtils.hpp  CoroutineTracker.hpp  CryptStreamUtils.hpp  DatabaseDialect.hpp  DateFormatType.hpp  FileUtils.hpp  FormatterUtils.hpp  IntegerHelper.hpp  KClassUtils.hpp  LongHelper.hpp  MaxFileSizeExceeded.hpp  MimeType.hpp  NumberOfBytes.hpp  ProjectForgeException.hpp  PropertyUtils.hpp  StringHelper2.hpp  StringMatchUtils.hpp  StringModifier.hpp  Version.hpp  ZipMode.hpp  ZipUtils.hpp
projectforge-common/include/projectforge-common/anots/: PropertyInfo.hpp
projectforge-common/include/projectforge-common/extensions/: KotlinDateExtensions.hpp  KotlinNumberExtensions.hpp  KotlinStringExtensions.hpp
projectforge-common/include/projectforge-common/html/: CssClass.hpp  Html.hpp  HtmlDocument.hpp  HtmlElement.hpp  HtmlList.hpp  HtmlTable.hpp
projectforge-common/include/projectforge-common/i18n/: I18nEnum.hpp  MessageParam.hpp  MessageParamType.hpp  Priority.hpp  UserException.hpp
projectforge-common/include/projectforge-common/logging/: FiFoBuffer.hpp  LogBuilder.hpp  LogConstants.hpp  LogDuration.hpp  LogFilter.hpp  LogLevel.hpp  LogQueue.hpp  LogSubscription.hpp  LogUtils.hpp  LoggingEventData.hpp
projectforge-common/include/projectforge-common/mgc/: MatchResult.hpp  Matcher.hpp
projectforge-common/include/projectforge-common/props/: PropUtils.hpp  PropertyType.hpp
projectforge-common/include/projectforge-common/shared/: StorageConstants.hpp  StorageUtils.hpp
projectforge-common/include/projectforge-common/task/: TaskStatus.hpp  TimesheetBookingStatus.hpp
projectforge-common/src/: ApplicationContext.cpp  BeanHelper.cpp  CSVParser.cpp  CSVWriter.cpp  CanonicalFileUtils.cpp  CommonImplementationsExpanded.cpp  CommonUtilitiesExpanded.cpp  ConfigHelper.cpp  CryptoHelper.cpp  DateHelper.cpp  FileHelper.cpp  I18nHelper.cpp  IdGenerator.cpp  IntegerHelper.cpp  Logging.cpp  LongHelper.cpp  MimeType.cpp  NumberHelper.cpp  ProjectForgeException.cpp  ProjectForgeVersion.cpp  StringHelper.cpp  UtilsExt.cpp  Version.cpp  XmlHelper.cpp
projectforge-common/src/logging/: LoggingFrameworkComplete.cpp
projectforge-commons-test/: CMakeLists.txt
projectforge-commons-test/src/: TestBase.cpp
projectforge-idp/: CMakeLists.txt
projectforge-idp/src/: IdpModule.cpp
projectforge-jcr/: CMakeLists.txt
projectforge-jcr/src/: ContentRepositoryManager.cpp  FileSystemJcrBackend.cpp  JcrNode.cpp  SqliteJcrBackend.cpp  file_info.cpp  file_object.cpp  file_object_list.cpp  property_info.cpp  property_type.cpp  repo_config.cpp  session_wrapper.cpp  value_info.cpp
projectforge-model/: CMakeLists.txt
projectforge-model/src/: AbstractBaseObject.cpp  ModelHelpersExt.cpp  abstract_base_object.cpp  address_object.cpp  calendar_object.cpp  cost2_object.cpp  datetime_serialization.cpp  rest_paths.cpp  task_object.cpp  timesheet_object.cpp  timesheet_template_object.cpp  user_object.cpp
projectforge-rest/: CMakeLists.txt
projectforge-rest/src/: RestHandlersExpanded.cpp  RestHandlersImpl.cpp  RestModule.cpp  RestServiceRouterComplete.cpp
projectforge-wicket/: CMakeLists.txt
projectforge-wicket/src/: PageRendererComplete.cpp  WicketModule.cpp
(+494 files in other folders)
